--- a/View/vListPage.xaml
+++ b/View/vListPage.xaml
@@ -28,7 +28,7 @@
                 FontSize="55"/>
         </StackPanel>
 
-        <StackPanel x:Name="sp2" Grid.Row="2" Orientation="Horizontal">
+        <StackPanel Visibility="Hidden" x:Name="sp2" Grid.Row="2" Orientation="Horizontal">
             <ComboBox                               
                 Name="cmbName"                 
                 materialDesign:HintAssist.Hint="SUBJECT"  
